# cluster-over-sampling

./: .copier-answers.yml  .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.rst  appveyor.yml  environment.yml  mkdocs.yml  noxfile.py  pdm.toml  pyproject.toml  requirements.docs.txt  requirements.optional.txt  requirements.txt  setup.py
.circleci/: config.yml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  config.yml  feature_request.md  feature_request.yaml
.github/workflows/: ci-docs.yml  ci.yml  doc.yml  doc_deploy.yml  doc_preview.yml
clover/: __init__.py
clover/distribution/: __init__.py  _density.py  base.py  density.py
clover/distribution/tests/: test_base.py  test_density.py
clover/over_sampling/: __init__.py  _cluster.py  _gsomo.py  _kmeans_smote.py  _somo.py  base.py  monkey_patching.py
clover/over_sampling/tests/: test_base.py  test_cluster.py  test_gsomo.py  test_kmeans_smote.py  test_monkey_patching.py  test_somo.py
conda-recipe/: conda_deployment.sh
conda-recipe/cluster-over-sampling/: meta.yaml
doc/: about.rst  api.rst  clover.rst  conf.py  contribute.rst  index.rst  install.rst  introduction.rst  release_history.rst  test.rst  user_guide.rst
docs/: gen_api_nav.py  generate_api.py
docs/examples/: README.md  plot_cluster_oversamplers.py
docs/overview/: user_guide.md
examples/: README.txt  plot_basic_cluster_oversamplers.py  plot_cluster_oversampler.py  plot_clustering_oversampling.py
news/: +restructure.refactor.txt  2.fix.txt  5.docs.txt  changelog_template.jinja
src/clover/: __init__.py
src/clover/clusterer/: _som.py
src/clover/distribution/: _density.py  base.py
src/clover/over_sampling/: __init__.py  _cluster.py  _gsomo.py  _kmeans_smote.py  _somo.py
tests/: __init__.py
tests/clusterer/: test_som.py
tests/distribution/: test_base.py  test_density.py
tests/over_sampling/: test_cluster.py  test_gsomo.py  test_kmeans_smote.py  test_somo.py
